--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,14 +1,18 @@
 body {
  margin: 0;
  padding: 0;
- font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+ font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+/* Header */
 
 .title{
     text-align: center;
     font-size: 1.5rem;
     margin-top: 1.5rem;
 }
+
+/* Main */
 
 .container{
     margin-top: 3rem;
@@ -32,10 +36,6 @@ body {
 }
 
 
-#quote{
-    font-size: 1.2rem;
-}
-
 .button-container{
 display: flex;
 justify-content: center;
@@ -47,4 +47,109 @@ justify-content: center;
     padding: .5rem;
     margin-top: 1rem;
     background-color: aquamarine;
+}
+
+/* Footer */
+.footer-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: aqua;
+    padding: 1rem;
+    width: 100%;
+    height: auto;
+    box-sizing: border-box;
+    margin: 7rem 0 0 0; /* Added top margin to push it down */
+}
+
+.footer-creator{
+    font-size: 1.3rem;
+}
+
+@media (min-width: 48rem) {
+    
+    /* Header */
+
+.title{
+    text-align: center;
+    font-size: 2.5rem;
+    margin-top: 5rem;
+}
+
+.container{
+    margin-top: 6rem;
+
+    
+      
+}
+.quote-content{
+
+    font-size: 2rem;
+    flex-direction: column;
+    padding: 1.5rem;
+  
+}
+
+
+#button{
+    width: 35%;
+    padding: 2rem;
+    margin-top: 6rem;
+    font-size: 2rem;
+
+}
+
+/* Footer */
+.footer-container {
+    padding: 2rem;
+    width: 100%;
+ margin: 17rem 0 0 0; /*Added top margin to push it down */
+}
+
+.footer-creator{
+    font-size: 2rem;
+}
+
+}
+
+
+@media (min-width: 64rem){
+
+        /* Header */
+
+.title{
+    font-size: 2.7rem;
+
+}
+
+.container{
+    margin-top: 8rem;
+    
+      
+}
+.quote-content{
+
+    font-size: 2.3rem;
+    padding: 1.7rem;
+  
+}
+
+
+#button{
+    width: 20%;
+    padding: 2rem;
+    margin-top: 7rem;
+    font-size: 2.3rem;
+
+}
+
+/* Footer */
+.footer-container {
+    margin: 6rem 0 0 0; /*Added top margin to push it down */
+
+}
+
+.footer-creator{
+    font-size: 2.3rem;
+}
 }
